--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -1456,6 +1456,11 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-bottom: 50px;
 }
 
+.py-6 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .pt-1 {
   padding-top: 10px;
 }
@@ -1514,6 +1519,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .pb-5 {
   padding-bottom: 50px;
+}
+
+.pt-6 {
+  padding-top: 60px;
 }
 
 .text-left {
@@ -2038,6 +2047,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     padding-right: 100px;
   }
 
+  .lg\:pb-0 {
+    padding-bottom: 0px;
+  }
+
+  .lg\:pb-9 {
+    padding-bottom: 90px;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -2157,6 +2174,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
   .xl\:pb-9 {
     padding-bottom: 90px;
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0px;
   }
 }
 
