--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -587,6 +587,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   bottom: -85px;
 }
 
+.left-\[15px\] {
+  left: 15px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -748,6 +756,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   margin-bottom: 10px;
 }
 
+.mr-2 {
+  margin-right: 20px;
+}
+
+.mt-3 {
+  margin-top: 30px;
+}
+
 .block {
   display: block;
 }
@@ -842,6 +858,22 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   height: 20px;
 }
 
+.h-\[4px\] {
+  height: 4px;
+}
+
+.\!h-\[4px\] {
+  height: 4px !important;
+}
+
+.h-2 {
+  height: 20px;
+}
+
+.\!h-2 {
+  height: 20px !important;
+}
+
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -880,6 +912,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .min-h-\[450px\] {
   min-height: 450px;
+}
+
+.min-h-\[100px\] {
+  min-height: 100px;
 }
 
 .w-full {
@@ -922,6 +958,22 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-5 {
+  width: 50px;
+}
+
+.\!w-5 {
+  width: 50px !important;
+}
+
+.w-2 {
+  width: 20px;
+}
+
+.\!w-2 {
+  width: 20px !important;
 }
 
 .min-w-\[260px\] {
@@ -1124,6 +1176,18 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   gap: 0px;
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1154,6 +1218,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .rounded {
   border-radius: 0.25rem;
+}
+
+.rounded-none {
+  border-radius: 0px;
+}
+
+.\!rounded-none {
+  border-radius: 0px !important;
 }
 
 .rounded-t-\[6px\] {
@@ -1263,6 +1335,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 .bg-grey {
   --tw-bg-opacity: 1;
   background-color: rgb(55 55 56 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#c0c0c0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 192 192 / var(--tw-bg-opacity));
+}
+
+.\!bg-\[\#c0c0c0\] {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(192 192 192 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-gradient-to-b {
@@ -1421,11 +1503,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-bottom: 10px;
 }
 
-.py-7 {
-  padding-top: 70px;
-  padding-bottom: 70px;
-}
-
 .py-10 {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -1446,6 +1523,11 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-bottom: 90px;
 }
 
+.py-6 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .py-\[180px\] {
   padding-top: 180px;
   padding-bottom: 180px;
@@ -1454,11 +1536,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 .py-5 {
   padding-top: 50px;
   padding-bottom: 50px;
-}
-
-.py-6 {
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .pt-1 {
@@ -1477,8 +1554,12 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-bottom: 30px;
 }
 
-.pt-10 {
-  padding-top: 100px;
+.pb-6 {
+  padding-bottom: 60px;
+}
+
+.pt-6 {
+  padding-top: 60px;
 }
 
 .pb-4 {
@@ -1493,8 +1574,8 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-top: 50px;
 }
 
-.pb-6 {
-  padding-bottom: 60px;
+.pt-10 {
+  padding-top: 100px;
 }
 
 .pb-\[310px\] {
@@ -1519,10 +1600,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .pb-5 {
   padding-bottom: 50px;
-}
-
-.pt-6 {
-  padding-top: 60px;
 }
 
 .text-left {
@@ -1596,6 +1673,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   line-height: 1;
 }
 
+.text-\[120px\] {
+  font-size: 120px;
+}
+
+.text-\[125px\] {
+  font-size: 125px;
+}
+
 .font-light {
   font-weight: 300;
 }
@@ -1614,6 +1699,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .font-normal {
   font-weight: 400;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .uppercase {
@@ -1640,16 +1729,20 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   line-height: 2.5rem;
 }
 
-.leading-\[1\.28\] {
-  line-height: 1.28;
-}
-
 .leading-none {
   line-height: 1;
 }
 
 .\!leading-snug {
   line-height: 1.375 !important;
+}
+
+.leading-\[0\.7\] {
+  line-height: 0.7;
+}
+
+.leading-\[0\.8\] {
+  line-height: 0.8;
 }
 
 .tracking-\[2\.8px\] {
@@ -1686,6 +1779,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-60 {
+  opacity: 0.6;
 }
 
 .mix-blend-hard-light {
@@ -1985,12 +2082,38 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     margin-left: 50px;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:\!block {
+    display: block !important;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:w-4\/5 {
     width: 80%;
   }
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-fit {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:max-w-lg {
@@ -2106,11 +2229,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   .lg\:leading-1 {
     line-height: 1.142;
   }
-
-  .lg\:even\:bg-lightGrey:nth-child(even) {
-    --tw-bg-opacity: 1;
-    background-color: rgb(247 247 253 / var(--tw-bg-opacity));
-  }
 }
 
 @media (min-width: 1280px) {
@@ -2124,10 +2242,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
   .xl\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .xl\:w-1\/2 {
-    width: 50%;
   }
 
   .xl\:columns-4 {
@@ -2170,14 +2284,6 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   .xl\:px-\[130px\] {
     padding-left: 130px;
     padding-right: 130px;
-  }
-
-  .xl\:pb-9 {
-    padding-bottom: 90px;
-  }
-
-  .xl\:pb-0 {
-    padding-bottom: 0px;
   }
 }
 
