--- a/templates/pools-services.html
+++ b/templates/pools-services.html
@@ -1,8 +1,8 @@
 <!--
   templateType: page
   isAvailableForNewContent: true
-  label: Pools
-  screenshotPath: ../images/template-previews/pools.jpg
+  label: Pools Services
+  screenshotPath: ../images/template-previews/pools-services.jpg
  -->
  
 {% extends "./layouts/base.html" %}
@@ -25,7 +25,7 @@
 	  %}
 
 	  {% include_dnd_partial
-	    path='../sections/services-expanded.html',
+	    path='../sections/services-expanded-slider.html',
 			context={
 				'title': '<h2 class="text-2xl md:text-5xl lg:text-7xl mb-5">Naše <strong>Usluge</strong></h2>'
 			}
