--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -490,8 +490,135 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   background-color: rgb(197 152 234 / var(--tw-bg-opacity));
 }
 
+.menu__link {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  padding-right: 0px;
+  text-align: left;
+  font-size: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.menu__link:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 161 236 / var(--tw-bg-opacity));
+}
+
+.menu__link {
+  position: relative;
+}
+
+@media (min-width: 1024px) {
+  .menu__link {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 16px;
+    line-height: 1.25rem;
+    font-weight: 500;
+    text-transform: none;
+    line-height: 1.25;
+    --tw-text-opacity: 1;
+    color: rgb(55 55 56 / var(--tw-text-opacity));
+  }
+
+  .menu__link:hover {
+    background-color: transparent;
+  }
+
+  .menu__link::after {
+    position: absolute;
+    bottom: 18px;
+    left: 10px;
+    height: 2px;
+    width: 0px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(215 180 243 / var(--tw-bg-opacity));
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 300ms;
+    --tw-content: '';
+    content: var(--tw-content);
+  }
+
+  .menu__link:hover::after {
+    content: var(--tw-content);
+    width: calc(100% - 20px);
+  }
+}
+
+.menu__link {
+  text-decoration: none;
+}
+
+.menu__item--open .menu__submenu {
+  display: flex;
+}
+
+.menu__item--open .menu__child-toggle-icon {
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.menu__submenu .menu__item {
+  width: 100%;
+  padding: 0px;
+}
+
+.menu__submenu .menu__item:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 243 245 / var(--tw-bg-opacity));
+}
+
+.menu__submenu .menu__link {
+  display: block;
+  width: 100%;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(55 55 56 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .menu__submenu .menu__link {
+    text-align: left;
+    font-size: 12px;
+  }
+
+  .menu__submenu .menu__link::after {
+    bottom: 0px;
+    content: var(--tw-content);
+    left: 0px;
+  }
+
+  .menu__submenu .menu__link:hover::after {
+    content: var(--tw-content);
+    width: 100%;
+  }
+}
+
 .visible {
   visibility: visible;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.static {
+  position: static;
 }
 
 .fixed {
@@ -575,6 +702,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   top: -65px;
 }
 
+.top-full {
+  top: 100%;
+}
+
+.right-1 {
+  right: 10px;
+}
+
 .top-\[-75px\] {
   top: -75px;
 }
@@ -601,6 +736,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .\!z-\[101\] {
   z-index: 101 !important;
+}
+
+.z-\[99\] {
+  z-index: 99;
 }
 
 .z-0 {
@@ -724,6 +863,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   margin-top: 25px;
 }
 
+.ml-\[15px\] {
+  margin-left: 15px;
+}
+
 .mt-4 {
   margin-top: 40px;
 }
@@ -830,6 +973,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   height: 25px;
 }
 
+.h-\[6px\] {
+  height: 6px;
+}
+
 .h-0\.5 {
   height: 5px;
 }
@@ -926,6 +1073,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[12px\] {
+  width: 12px;
 }
 
 .min-w-\[260px\] {
@@ -1031,8 +1182,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.transform-none {
+  transform: none;
+}
+
 .cursor-pointer {
   cursor: pointer;
+}
+
+.list-none {
+  list-style-type: none;
 }
 
 .columns-1 {
@@ -1164,6 +1323,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   border-radius: 4px;
 }
 
+.rounded-none {
+  border-radius: 0px;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1196,6 +1359,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .border-b {
   border-bottom-width: 1px;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .border-white {
@@ -1375,12 +1542,12 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding: 20px;
 }
 
-.p-3 {
-  padding: 30px;
-}
-
 .p-0 {
   padding: 0px;
+}
+
+.p-3 {
+  padding: 30px;
 }
 
 .px-5 {
@@ -1433,6 +1600,11 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   padding-bottom: 10px;
 }
 
+.py-2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .py-10 {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -1478,6 +1650,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
 .pl-5 {
   padding-left: 50px;
+}
+
+.pt-\[130px\] {
+  padding-top: 130px;
 }
 
 .pb-3 {
@@ -1699,6 +1875,12 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   mix-blend-mode: hard-light;
 }
 
+.shadow-none {
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-custom {
   --tw-shadow: 0 0 50px rgba(0, 0, 0, 0.10);
   --tw-shadow-colored: 0 0 50px var(--tw-shadow-color);
@@ -1736,6 +1918,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .hover\:cursor-pointer:hover {
@@ -1948,6 +2134,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 }
 
 @media (min-width: 1024px) {
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:bottom-3 {
     bottom: 30px;
   }
@@ -1992,6 +2182,10 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     margin-bottom: 40px;
   }
 
+  .lg\:ml-0 {
+    margin-left: 0px;
+  }
+
   .lg\:ml-5 {
     margin-left: 50px;
   }
@@ -2000,8 +2194,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     display: block !important;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-\[6px\] {
+    height: 6px;
   }
 
   .lg\:w-1\/4 {
@@ -2014,6 +2216,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-\[10px\] {
+    width: 10px;
+  }
+
+  .lg\:w-max {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
   }
 
   .lg\:max-w-lg {
@@ -2061,6 +2273,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     border-radius: 6px;
   }
 
+  .lg\:rounded {
+    border-radius: 0.25rem;
+  }
+
+  .lg\:stroke-grey {
+    stroke: #373738;
+  }
+
   .lg\:p-3 {
     padding: 30px;
   }
@@ -2068,6 +2288,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   .lg\:px-10 {
     padding-left: 100px;
     padding-right: 100px;
+  }
+
+  .lg\:px-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .lg\:py-2 {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 
   .lg\:pb-0 {
@@ -2128,6 +2358,12 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
   .lg\:leading-1 {
     line-height: 1.142;
+  }
+
+  .lg\:shadow-lg {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
 
