--- a/templates/pools-services.html
+++ b/templates/pools-services.html
@@ -18,7 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
-	      'title': '<h1 class="font-normal mb-2 text-6xl">Bazeni</h1>',
+	      'title': '<h1 class="font-normal mb-2 text-6xl">Projektovanje i izgradnja bazena</h1>',
 				'subtitle': '<p class="font-light text-lg md:text-3xl mb-2">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>',
 				'button_text': 'KONTAKTIRAJTE NAS'
 	    }
@@ -27,7 +27,7 @@
 	  {% include_dnd_partial
 	    path='../sections/services-expanded-slider.html',
 			context={
-				'title': '<h2 class="text-2xl md:text-5xl lg:text-7xl mb-5">Naše <strong>Usluge</strong></h2>'
+				'title': '<h2 class="text-2xl md:text-5xl lg:text-7xl mb-5">Naše usluge</h2>'
 			}
 	  %}
 
@@ -66,7 +66,7 @@
 				'description': "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.",
 				'link_label': 'Opširnije',
 				'h_tag_choice': 'h3',
-				'reverse_content_direction':true
+				'reverse_content_direction': true
 			}
 	  %}
 
