--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -890,6 +890,14 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
   margin-bottom: 40px;
 }
 
+.mt-0\.5 {
+  margin-top: 5px;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
 .block {
   display: block;
 }
@@ -2415,6 +2423,16 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
     padding-left: 130px;
     padding-right: 130px;
   }
+
+  .xl\:text-base {
+    font-size: 18px;
+    line-height: 1.555;
+  }
+
+  .xl\:text-3xl {
+    font-size: 32px;
+    line-height: 2.25rem;
+  }
 }
 
 @media (min-width: 1536px) {
@@ -2424,9 +2442,5 @@ button:hover, button:focus, .button:hover, .button:focus, button:active, .button
 
   .\32xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .\32xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
