--- a/templates/pools-equipment.html
+++ b/templates/pools-equipment.html
@@ -19,7 +19,7 @@ class='body-container body-container--home'
 {% include_dnd_partial
 path='../sections/header-1.html',
 context={
-'title': '<h1 class="font-normal mb-2 text-6xl">Oprema za Bazene</h1>',
+'title': '<h1 class="font-normal mb-2 text-6xl">Oprema za bazene</h1>',
 'subtitle': '<p class="font-light text-lg md:text-3xl">A&T SISTEM je firma kojoj sa punim poverenjem možete poveriti kompletne radove oko izgradnje komercijalnih i rezidencijalnih betonskih bazena, od izrade idejnog rešenja do puštanja bazenskog sistema u rad.</p>'
 }
 %}
