--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -18,7 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
-	      'title': '<h1 class="font-normal mb-2 text-6xl">About Us</h1>',
+	      'title': '<h1>About Us</h1>',
 				'subtitle': '<p class="font-light text-lg md:text-3xl">Cilj nam je da idemo u korak sa savremenim trendovima, jer je to uslov za dalji razvoj i napredak.</p>'
 	    }
 	  %}
