--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -18,7 +18,7 @@
   {% include_dnd_partial
     path='../sections/header-2.html',
     context = {
-      'title': '<h1 class="text-3xl lg:text-5xl leading-tight tracking-tight font-ex">Blog</h1>',
+      'title': '<h1>Blog</h1>',
     }
   %}
 
