--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -18,7 +18,7 @@
     {% include_dnd_partial
       path='../sections/header-1.html',
       context={
-        'title': '<h1 class="font-normal mb-2 text-6xl">Oprema za bazene</h1>',
+        'title': '<h1>Oprema za bazene</h1>',
         'subtitle': '<p class="font-light text-lg xl:text-3xl mb-2">A&T SISTEM nudi širok asortiman opreme za bazene renomeniranih proizvođača.</p>',
 				'button_text': 'POGLEDAJTE PONUDU'
       }
@@ -37,12 +37,15 @@
           {% dnd_module 
             path='@hubspot/rich_text',
 				    html='
-              <h2 class="text-4xl md:text-5xl mb-2">Kompletna bazenska oprema na jednom mestu</h2>
-              <p class="text-sm xl:text-base leading-snug">Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.</p>
+              <h2>Kompletna bazenska oprema na jednom mestu</h2>
+              <p class="text-sm xl:text-base leading-snug font-light">Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.
               <br>
-              <p class="text-sm xl:text-base leading-snug">A&T ponuda osnovne opreme za bazen obuhvata sve ugradne elemente i tehničku opremu bez kojih bazen ne bi mogao da funkcioniše, a to su: hidraulična mreža, ugradni elementi za cirkulaciju, pumpno filterski blok, elektroupravljačke komponente, osnovna oprema za održavanje.</p>
               <br>
-              <p class="text-sm xl:text-base leading-snug">Pored osnovne opreme postoji širok izbor dodatne bazenske opreme, u koju spada podvodna rasveta, oprema za grejanje bazenske vode (za produžetak sezone korišćenja bazena), hemijski tretman (bazenska voda treba da ima kvalitet pijaće vode), pokrivanje bazena (čuva bazen od prljanja i brzog hlađenja vode), bazenske atrakcije (za vežbanje, rekreaciju, dekoraciju), automatsko čišćenje bazena i drugo.</p>
+              A&T ponuda osnovne opreme za bazen obuhvata sve ugradne elemente i tehničku opremu bez kojih bazen ne bi mogao da funkcioniše, a to su: hidraulična mreža, ugradni elementi za cirkulaciju, pumpno filterski blok, elektroupravljačke komponente, osnovna oprema za održavanje.
+              <br>
+              <br>
+              Pored osnovne opreme postoji širok izbor dodatne bazenske opreme, u koju spada podvodna rasveta, oprema za grejanje bazenske vode (za produžetak sezone korišćenja bazena), hemijski tretman (bazenska voda treba da ima kvalitet pijaće vode), pokrivanje bazena (čuva bazen od prljanja i brzog hlađenja vode), bazenske atrakcije (za vežbanje, rekreaciju, dekoraciju), automatsko čišćenje bazena i drugo.
+              </p>
             '
           %}
           {% end_dnd_module %}
