--- a/templates/water-treatment.html
+++ b/templates/water-treatment.html
@@ -18,7 +18,7 @@
 	  {% include_dnd_partial
 	    path='../sections/header-1.html',
 	    context={
-	      'title': '<h1 class="font-normal mb-2 text-6xl">Water Treatment</h1>'
+	      'title': '<h1>Water Treatment</h1>'
 	    }
 	  %}
 
