--- a/templates/pools-services.html
+++ b/templates/pools-services.html
@@ -36,7 +36,11 @@
 			context={
 				'text_field': 'Niste pronašli ono što Vas zanima ili Vam treba još informacija?',
 				'link_label': 'Pošaljite upit',
-				'link_field': '/kontakt'
+				'link_field': {
+          "url": {
+            "href": '/kontakt'
+          },
+        }
 			}
 	  %}
 
@@ -47,7 +51,16 @@
         'description': 'A&T SISTEM je Vas pouzdan partner u projektovanju i izgradnji bazena dugi niz godina, a nasa saradnja sa BWI POOL PRODUCTS, renomiranim proizvodacem bazenske opreme garantuje vrhunski kvalitet uredaja, hidraulicki optimizovana resenja lum Iskusnin struchjaka na raspolaganju.<br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>',
         'link_label': 'Više o brendu',
         'reverse_content_direction': true,
-				'image_src': 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/BWT%20Pool%20Products.jpg'
+				'image_field': {
+            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/BWT%20Pool%20Products.jpg',
+            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "size_type": null,
+            "width": 725,
+            "height": 500,
+            "loading": "lazy",
+            "max_width": 725,
+            "max_height": 500
+          }
       }
     %}
 
@@ -58,7 +71,16 @@
 				'description': "Prekrivač za bazen štiti od prašine, lišća, insekata i nečistoće, zadržava željenu temperaturu vode, i smanjuje mogućnost stvaranja algi, a ima naročito važnu ulogu za bezbednost dece i kućnih ljubimaca. Otkrijete našu fantastičnu ponudu koja obuhvata sve tipove bazenskih pokrivača, uključujući i bazenske kupole i pokretne konstrukcije po kojima može da se hoda.",
 				'link_label': 'Opširnije',
 				'h_tag_choice': 'h3',
-				'image_src': 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg'
+				'image_field': {
+            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
+            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "size_type": null,
+            "width": 725,
+            "height": 500,
+            "loading": "lazy",
+            "max_width": 725,
+            "max_height": 500
+          }
 			}
 	  %}
 
@@ -70,7 +92,16 @@
 				'link_label': 'Opširnije',
 				'h_tag_choice': 'h3',
 				'reverse_content_direction': true,
-				'image_src': 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/wooden%20pool.jpg'
+				'image_field': {
+            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/wooden%20pool.jpg',
+            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "size_type": null,
+            "width": 725,
+            "height": 500,
+            "loading": "lazy",
+            "max_width": 725,
+            "max_height": 500
+          }
 			}
 	  %}
 
