--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -38,7 +38,7 @@
             path='@hubspot/rich_text',
 				    html='
               <h2>Kompletna bazenska oprema na jednom mestu</h2>
-              <p class="text-sm xl:text-base leading-snug font-light">Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.
+              <p>Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.
               <br>
               <br>
               A&T ponuda osnovne opreme za bazen obuhvata sve ugradne elemente i tehničku opremu bez kojih bazen ne bi mogao da funkcioniše, a to su: hidraulična mreža, ugradni elementi za cirkulaciju, pumpno filterski blok, elektroupravljačke komponente, osnovna oprema za održavanje.
@@ -112,7 +112,17 @@
         'description': 'Otkrijete našu fantastičnu ponudu koja obuhvata sve tipove bazenskih pokrivača, uključujući i bazenske kupole i pokretne konstrukcije po kojima može da se hoda.',
         'h_tag_choice': 'h3',
         'link_label': 'Opširnije',
-        'reverse_content_direction': true
+        'reverse_content_direction': true,
+        'image_field': {
+            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
+            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "size_type": null,
+            "width": 725,
+            "height": 500,
+            "loading": "lazy",
+            "max_width": 725,
+            "max_height": 500
+          }
       }
     %}
 
@@ -252,7 +262,17 @@
         'title': 'BWT - Pool Products',
         'description': 'Sa ponosom predstavljamo našeg dugogodišnjeg partnera, koji proizvodi bazensku opremu vrhunskog kvalitete u čak tri svoje fabrike u Bretanji, na severu Francuske.<br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>',
         'link_label': 'Više o brendu',
-        'reverse_content_direction': true
+        'reverse_content_direction': true,
+        'image_field': {
+            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/BWT%20Pool%20Products.jpg',
+            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "size_type": null,
+            "width": 725,
+            "height": 500,
+            "loading": "lazy",
+            "max_width": 725,
+            "max_height": 500
+          }
       }
     %}
 
